--- a/DnD-Site/DnD-Game-Site.html
+++ b/DnD-Site/DnD-Game-Site.html
@@ -679,7 +679,8 @@
                     <p class="text-white fotter-about">
                         <a>Know more</a><br>
                         <a>Feedback</a><br>
-                        <a>Source Code</a><br>
+                        <a href="https://github.com/Deepayan-S/Dndsite" class="text-white" target="_blank">Source Code</a><br>
+                        <a href="https://github.com/Deepayan-S/Dndsite/issues" class="text-white" target="_blank">Report Bug</a>
                     </p>
                 </div>
             </div>
