--- a/DnD-Site/DnD-Game-Site.html
+++ b/DnD-Site/DnD-Game-Site.html
@@ -8,6 +8,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/54f5c2ff80.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="DnD-Game-Site.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://res.cloudinary.com/dbxsbnvja/image/upload/v1712906230/DND/DnD__5_o89vc7.png">
     <title>DndSite</title>
 </head>
@@ -38,12 +41,12 @@
     <div class="dnd-homeCover text-center d-flex flex-column justify-content-center mt-5 mb-5" id="HOMEsection">
         <div class="home-space">
             <h1 class="text-white mb-2 size-head-text d-inline" id="homeHead">
-                Start Your Own Campain<br>
+                Start Your Own Campaign<br>
             </h1>
-            <p class="text-white mb-3 size-text d-inline" id="homePara">
-                Explore the world of <br><span class="dnd-tag">Dungeon And Dragons</span><br>
+            <p class="text-white mb-5 size-text d-inline" id="homePara">
+                Explore the world of <br><span class="dnd-tag creepster-regular">Dungeon And Dragons</span><br>
             </p>
-            <div>
+            <div class="mt-3">
                 <a href="https://www.dandwiki.com/wiki/" target="_blank">
                     <button class="btn btn-dark">Learn more</button>
                 </a>
@@ -58,7 +61,7 @@
                     <h2>What is DND?</h2>
                     <div class="embed-responsive embed-responsive-16by9 mb-4">
                         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/BgvHNlgmKro?si=02yVGVu5oB3rPgkW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                      </div>
+                    </div>
                     <p class="dndCharacterDescription">
                         Dungeons & Dragons (commonly abbreviated as D&D or DnD) is a fantasy tabletop role-playing game (RPG) originally created and designed by Gary Gygax and Dave Arneson. The game was first published in 1974 by Tactical Studies Rules, Inc. It has been published by Wizards of the Coast, later a subsidiary of Hasbro, since 1997. The game was derived from miniature wargames, with a variation of the 1971 game Chainmail serving as the initial rule system. D&D's publication is commonly recognized as the beginning of modern role-playing games and the role-playing game industry, and also deeply influenced video games, especially the role-playing video game genre.
 
@@ -66,7 +69,7 @@
                     </p>
                 </div>
             </div>
-        </div>  
+        </div>
     </div>
     <!--Explore Games-->
     <div id="EGsection">
@@ -598,33 +601,96 @@
     <div id="COMsection">
         <div class="container">
             <div class="row">
-                    <h2 class="col-12 mt-5 mb-4">Community</h2>
-                    <p class="dndCharacterDescription col-12">
-                        Dungeons & Dragons is more than just a gaming franchise. It's a vast world filled with amazing people, thrilling places, and magical things. There are lots of ways to find D&D games, references, and communities thanks to various online communities that have evolved online.
-                        <br>
-                        There are several gaming communities you can visit if you're interested in finding or joining an online D&D community, and the selection includes forums, discord servers, and websites. It's not just the adventure — it's the friends that we make along the way.
-                    </p>
-                    <h3 class="col-12 mb-3">Community games</h3>
-                    <div class="col-12 col-md-6 mb-3">
-                        <div class="embed-responsive embed-responsive-16by9 ">
-                            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9Eck0yY1W-8?si=jE-CLlyC08ppQfwm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h2 class="col-12 mt-5 mb-4">Community</h2>
+                <p class="dndCharacterDescription col-12">
+                    Dungeons & Dragons is more than just a gaming franchise. It's a vast world filled with amazing people, thrilling places, and magical things. There are lots of ways to find D&D games, references, and communities thanks to various online communities that have evolved online.
+                    <br>
+                    There are several gaming communities you can visit if you're interested in finding or joining an online D&D community, and the selection includes forums, discord servers, and websites. It's not just the adventure — it's the friends that we make along the way.
+                </p>
+                <h3 class="col-12 mb-3">Online Community</h3>
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-12 col-lg-4 text-center">
+                            <img src="https://res.cloudinary.com/dbxsbnvja/image/upload/v1712931818/DND/ca760f44e7c3c5a531018b7b667af772_original_moyvgx.png">
+                        </div>
+                        <div class="dndCharacterDescription col-12 col-lg-8">
+                            <div class="d-flex flex-column justify-content-center h-100">
+                                <p>
+                                    Anyone who's a fan of Critical Role has probably found their <span>Discord server</span> already, and it's great for any fans of D&D, not just folks who are into this show. The population of the server is impressive, with more than 30,000 regular users and more than 10,000 online at any given time, so you can interact with like-minded players with ideas, questions, or resources anytime you want.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 mb-3">
-                        <div class="embed-responsive embed-responsive-16by9 ">
-                            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/t7abcqBXe6Y?si=ZzhMTJKFOvy3ouB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        </div>    
+                </div>
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-12 col-lg-4 order-lg-1 text-center">
+                            <img src="https://res.cloudinary.com/dbxsbnvja/image/upload/v1712932073/DND/images_b08oye.png">
+                        </div>
+                        <div class="dndCharacterDescription col-12 col-lg-8 order-lg-0">
+                            <div class="d-flex flex-column justify-content-center h-100">
+                                <p>
+                                    RPG Crossing might be one of the oldest websites on this list, never mind one of the longest-running online gaming communities in history. This website has been operational in some form since 2003, and you can imagine the plethora of information that two decades can generate.
+
+                                    As the name suggests, there are resources here for a variety of games including Pathfinder, GURPS, and Serenity. The website has a forum in addition to a virtual mountain of information for players of all experience levels.
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 mb-3">
-                        <div class="embed-responsive embed-responsive-16by9 ">
-                            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/OQx7q6mwkV4?si=jE38Ae0-92W9PavK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        </div>    
+                </div>
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-12 col-lg-6 text-center">
+                            <img class="w-100 h-auto" src="https://res.cloudinary.com/dbxsbnvja/image/upload/v1712932370/DND/download_rdetbf.png">
+                        </div>
+                        <div class="dndCharacterDescription col-12 col-lg-6">
+                            <div class="d-flex flex-column justify-content-center h-100">
+                                <p>
+                                    D&D Beyond is generally thought of as a resources website, but they have a massive and thriving forum that includes discussions and updated information and resources for even the smallest detail of gameplay. This is the only site on the list that's officially connected to Wizards of the Coast, so it better be good, and it is.
+
+                                    The extensive list of forums is organized by subject and includes classes, homebrews, dungeon master needs, and much more. What makes this site even more convenient is all the other D&D material that's only a click away.
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 mb-3">
-                        <div class="embed-responsive embed-responsive-16by9 ">
-                            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YJzIPmsxxQY?si=f4st-_BwjTX5tEnM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        </div>    
+                </div>
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-12 col-lg-6 order-lg-1 text-center">
+                            <img class="w-100 h-auto" src="https://res.cloudinary.com/dbxsbnvja/image/upload/v1712932412/DND/website-logo-2021-compressed_1_hbbsny.png">
+                        </div>
+                        <div class="dndCharacterDescription col-12 col-lg-6 order-lg-0">
+                            <div class="d-flex flex-column justify-content-center h-100">
+                                <p>
+                                    RPG Crossing might be one of the oldest websites on this list, never mind one of the longest-running online gaming communities in history. This website has been operational in some form since 2003, and you can imagine the plethora of information that two decades can generate.
+
+                                    As the name suggests, there are resources here for a variety of games including Pathfinder, GURPS, and Serenity. The website has a forum in addition to a virtual mountain of information for players of all experience levels.
+                                </p>
+                            </div>
+                        </div>
                     </div>
+                </div>
+                <h3 class="col-12 mb-3">Community games</h3>
+                <div class="col-12 col-md-6 mb-3">
+                    <div class="embed-responsive embed-responsive-16by9 ">
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9Eck0yY1W-8?si=jE-CLlyC08ppQfwm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 mb-3">
+                    <div class="embed-responsive embed-responsive-16by9 ">
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/t7abcqBXe6Y?si=ZzhMTJKFOvy3ouB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 mb-3">
+                    <div class="embed-responsive embed-responsive-16by9 ">
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/OQx7q6mwkV4?si=jE38Ae0-92W9PavK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 mb-3">
+                    <div class="embed-responsive embed-responsive-16by9 ">
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YJzIPmsxxQY?si=f4st-_BwjTX5tEnM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -657,7 +723,7 @@
                 <div class="d-none d-md-inline col-md-4 col-xl-5 p-3">
                     <hr class="bg-white">
                 </div>
-                <div class="col-12 col-lg-3 order-1 order-lg-0">
+                <div class="col-12 col-lg-4 order-1 order-lg-0 text-center">
                     <h3 class="text-secondary">
                         About
                     </h3>
@@ -668,17 +734,17 @@
                         </a>
                     </p>
                 </div>
-                <div class="col-12 col-lg-6 text-center order-0 order-lg-1 mb-5">
+                <div class="col-12 col-lg-4 text-center order-0 order-lg-1 mb-5">
                     <img class="foot-logo" src="https://res.cloudinary.com/dbxsbnvja/image/upload/v1712903527/DND/da3bh57-2bb8f0c1-0c51-4928-8335-4d1854262242_npybga.png">
                 </div>
-                <div class="col-12 col-lg-3 order-2 order-lg-2 text-right">
-                    
+                <div class="col-12 col-lg-4 order-2 order-lg-2 text-center">
+
                     <h3 class="text-secondary">
                         Help
                     </h3>
                     <p class="text-white fotter-about">
-                        <a>Know more</a><br>
-                        <a>Feedback</a><br>
+                        <a href="https://www.youtube.com/watch?v=X25-OmELajI" class="text-white" target="_blank">Know more</a><br>
+                        <a href="https://www.surveymonkey.com/r/JGR8T9B" class="text-white" target="_blank">Feedback</a><br>
                         <a href="https://github.com/Deepayan-S/Dndsite" class="text-white" target="_blank">Source Code</a><br>
                         <a href="https://github.com/Deepayan-S/Dndsite/issues" class="text-white" target="_blank">Report Bug</a>
                     </p>
